<resources>
    <string name="app_name">Locartdoor Vendor</string>
    <string name="login">Login</string>
    <string name="Next">Next</string>
    <string name="delivering_on_the_promise_done_fast_done_right">Delivering on the promise\nDone fast . Done right</string>
    <string name="logo">logo</string>
    <string name="background">Background</string>
    <string name="already_have_an_account">Already have a vendor account ?</string>
    <string name="new_user">New vendor account ?</string>
    <string name="signup">Signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_">Continue</string>
    <string name="continue_to_register">Continue to register</string>
    <string name="mobile_number">Mobile number</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="locartdoor_nfor_vendor">Locartdoor\n<font size="25">for vendor</font></string>
    <string name="user_profile">User Profile</string>
    <string name="home">Home</string>
    <string name="my_orders">Orders</string>
    <string name="subscription">Subscription</string>
    <string name="payment_details">Payment Details</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="arrow">arrow</string>
    <string name="rs_symbol">₹</string>
    <string name="plan_price">₹999</string>
    <string name="query_category">Query category:</string>
    <string name="choose_category">Choose category</string>
    <string name="attachment">attachment</string>
    <string name="reference_id">Reference ID:</string>
</resources>
