<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/splash_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/background"
            android:src="@drawable/del_img"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"/>

            <FrameLayout android:layout_height="wrap_content"
                android:layout_width="wrap_content">

                <ImageButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/login"
                    android:src="@drawable/login_btn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/login"/>
            </FrameLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/new_user"/>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/signup_btn"
                    android:contentDescription="@string/signup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:textSize="17sp"
                    android:text="@string/signup"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/login_reg_contauiner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>