<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:background="@null"
        android:contentDescription=""/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="Register your profile"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneET"
            android:hint="@string/mobile_number"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shopnameET"
            android:hint="Shopname"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameET"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:hint="@string/email"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressET"
            android:hint="Address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/OTPHintStyle"
        android:saveEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_addressET"
            android:hint="Registration address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/greenD"
    android:textStyle="bold"
    android:text="Upload product list"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:src="@drawable/ic_camera"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:src="@drawable/ic_image"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:text="@string/continue_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:enabled="false" />
    </LinearLayout>


</LinearLayout>
</ScrollView>